deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web-app
  labels:
    app: python-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-web-app
  template:
    metadata:
      labels:
        app: python-web-app
    spec:
      containers:
      - name: python-web-app
        image: vikramvimal/python-web-app:v1
        volumeMounts:
          - name: local-volume
            mountPath: /opt
        ports:
        - containerPort: 8000
      volumes:
        - name: local-volume
          hostPath:
            path: /home/docker/test
