service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: python-web-app
  ports:
    - port: 80
      targetPort: 8000
      # Optional field

      nodePort: 30007
